--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -37,8 +37,12 @@ figure {
 .homeboxthree {
   background-color: #caebf2;
   font-size: 20px;
+  width: 120px;
+  margin-left: 140px;
 }
 .homeboxfour {
   background-color: #caebf2;
   font-size: 20px;
+  width: 120px;
+  margin-left: 140px;
 }
