--- a/src/Components/Store/Store.css
+++ b/src/Components/Store/Store.css
@@ -1,3 +1,58 @@
 #addtocart {
-  width: 100%;
+  display: inline-block;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  cursor: pointer;
+  padding: 6px 20px;
+  border: none;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  font: normal 18px / normal "Quantico", Helvetica, sans-serif;
+  color: rgba(255, 255, 255, 0.9);
+  -o-text-overflow: class= "support css-value" >clip;
+  text-overflow: clip;
+  background: #ff3b3f;
+  -webkit-box-shadow: 1px 1px 0 0 #ff3b3f;
+  box-shadow: 1px 1px 0 0 #ff3b3f;
+  text-shadow: 1px 1px 0 rgba(168, 168, 168, 0.66);
+  -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  position: relative;
+  bottom: 10px;
+}
+.Store {
+  background-color: #efefef;
+  margin-top: -22px;
+}
+.storeboxzero {
+  background-color: #caebf2;
+  font-size: 20px;
+  width: 120px;
+  margin-left: 140px;
+}
+.storeboxone {
+  background-color: #caebf2;
+  font-size: 20px;
+  width: 250px;
+  margin-left: 80px;
+  word-wrap: break-word;
+}
+.storeboxtwo {
+  background-color: #caebf2;
+  font-size: 15px;
+}
+.storeboxthree {
+  background-color: #caebf2;
+  font-size: 20px;
+  width: 120px;
+  margin-left: 140px;
+  font-size: 25px;
+}
+.list-item {
+  border-width: 3px;
+  border-style: dotted;
+  border-color: #ff3b3f;
 }
