store-responsive-done

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -46,13 +46,13 @@ figure {
   width: 120px;
   margin-left: 140px;
 }
-@media all and (max-width: 1800px) {
+@media all and (min-width: 1800px) {
 }
-@media all and (max-width: 1200px) {
+@media all and (min-width: 1200px) {
 }
-@media all and (max-width: 900px) {
+@media all and (min-width: 750px) {
 }
-@media all and (min-width: 600px) {
+@media only screen and (min-width: 600px) {
   .homeboxthree {
     background-color: #caebf2;
     font-size: 25px;
