home-responsive-done-added-new-images

--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -56,6 +56,9 @@
 #checkoutbutton {
   background-color: darkred;
 }
+/* .historyicon {
+  width: 10%;
+} */
 .button {
   background-color: #004a7f;
   -webkit-border-radius: 10px;
