--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -64,7 +64,7 @@
     font-size: 35px;
   }
   .homeimg {
-    width: 30%;
+    width: 20%;
   }
 }
 @media only screen and (min-width: 895px) and (max-width: 1200px) {
@@ -82,6 +82,9 @@
   }
   .homeboxfive {
     font-size: 35px;
+  }
+  .homeimg {
+    width: 15%;
   }
 }
 @media only screen and (min-width: 750px) and (max-width: 895px) {
