--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -46,6 +46,9 @@
   .homeimg {
     width: 20%;
   }
+  .Home {
+    margin-top: -35px;
+  }
 }
 @media only screen and (min-width: 1200px) and (max-width: 1650px) {
   .homeboxone {
@@ -65,6 +68,9 @@
   }
   .homeimg {
     width: 20%;
+  }
+  .Home {
+    margin-top: -35px;
   }
 }
 @media only screen and (min-width: 895px) and (max-width: 1200px) {
@@ -86,6 +92,9 @@
   .homeimg {
     width: 15%;
   }
+  .Home {
+    margin-top: -37px;
+  }
 }
 @media only screen and (min-width: 750px) and (max-width: 895px) {
   .homeboxone {
@@ -103,6 +112,9 @@
   .homeboxfive {
     font-size: 25px;
   }
+  .Home {
+    margin-top: -32px;
+  }
 }
 @media only screen and (min-width: 600px) and (max-width: 750px) {
   .homeboxthree {
@@ -116,5 +128,8 @@
   .homeboxfive {
     background-color: #caebf2;
     font-size: 25px;
+  }
+  .Home {
+    margin-top: -30px;
   }
 }
