--- a/src/Components/Store/Store.css
+++ b/src/Components/Store/Store.css
@@ -22,6 +22,7 @@
   transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
   position: relative;
   bottom: 10px;
+  border-radius: 10px;
 }
 @keyframes zoom {
   from {
